--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        ".gitignore": true,
+        ".gitignore": false,
         "package-lock.json": true,
         "README.md": true
     },
